--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -9089,6 +9089,10 @@ footer {
     overflow: hidden;
     width: 100%;
   }
+  .il-layout-page .nav.il-maincontrols {
+    grid-row: 4;
+    grid-column: 1;
+  }
   .il-layout-page .nav.il-maincontrols .il-maincontrols-mainbar {
     display: grid;
     display: -ms-grid;
@@ -9214,14 +9218,6 @@ footer {
   .il-header-locator span.caret {
     display: none;
   }
-  nav.il-maincontrols {
-    -ms-grid-column: 1;
-    -ms-grid-row: 3;
-    grid-column: 1;
-    grid-row: 3;
-    width: 100%;
-    z-index: 997;
-  }
   .il-maincontrols-mainbar {
     display: block;
     width: 100%;
@@ -9274,11 +9270,15 @@ footer {
     display: block;
   }
   .il-layout-page-content {
-    -ms-grid-column: 2;
+    -ms-grid-column: 1;
     -ms-grid-row: 3;
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 3;
     overflow: auto;
+  }
+  div.il-system-infos {
+    grid-column: 1;
+    -ms-grid-column: 1;
   }
 }
 /*
